--- a/app/src/main/res/drawable/sy_dialog_radius.xml
+++ b/app/src/main/res/drawable/sy_dialog_radius.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="50dp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/base_background_color"/>
+    <corners android:radius="10dp"/>
     <padding
         android:left="10dp"
         android:top="10dp"
