--- a/app/src/main/res/layout/activity_maps_rentcar_mainfrag.xml
+++ b/app/src/main/res/layout/activity_maps_rentcar_mainfrag.xml
@@ -98,7 +98,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="70dp"
                 android:cursorVisible="true"
-                android:fontFamily="@font/nanumsquarebold"
+                android:fontFamily="@font/nanumsquareregular"
                 android:text="@string/reserve_date_title_str"
                 android:textColor="#ff4d4d"
                 android:textSize="14sp"
@@ -154,10 +154,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginBottom="70dp"
+                android:fontFamily="@font/nanumsquareregular"
                 android:focusable="true"
                 android:text="반납"
                 android:textColor="#ff4d4d"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -167,7 +170,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="46dp"
                 android:layout_marginEnd="24dp"
+                android:layout_marginBottom="48dp"
                 android:text="2019.10.04(금)"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -175,12 +180,14 @@
                 android:id="@+id/return_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="70dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="24dp"
                 android:text="17:00"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
