- 이용내역 > 상세내역에 결제 금액 추가   - 이용내역에서 전화걸기 버튼 UI 수정.   - 이용내역에서 맨 위 구분선 UI 수정.

--- a/app/src/main/res/layout/activity_use_detail.xml
+++ b/app/src/main/res/layout/activity_use_detail.xml
@@ -289,13 +289,13 @@
 
                 <TextView
                     android:id="@+id/use_approve_info"
-                    android:fontFamily="@font/nanumsquarebold"
+                    android:fontFamily="@font/nanumsquareregular"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:layout_gravity="left|center_horizontal|center_vertical"
                     android:letterSpacing="0.05"
-                    android:text="케이뱅크 ****3840"
-                    android:textColor="@color/textColorPrimary"
+                    android:text="결제 금액"
+                    android:textColor="#b33e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
 
