--- a/app/src/main/res/layout/activity_use_history.xml
+++ b/app/src/main/res/layout/activity_use_history.xml
@@ -33,7 +33,7 @@
         android:id="@+id/use_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#333e3e3e"
+        android:background="#3e3e3e"
         app:layout_constraintTop_toBottomOf="@+id/use_history_include" />
 
 
