--- a/app/src/main/res/layout/use_list_item.xml
+++ b/app/src/main/res/layout/use_list_item.xml
@@ -158,7 +158,7 @@
                 <TextView
                     android:id="@+id/use_column7"
                     android:fontFamily="@font/nanumsquareregular"
-                    android:layout_width="160dp"
+                    android:layout_width="120dp"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="관악 1호점 (김태현) "
@@ -171,7 +171,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="11dp"
+                android:layout_marginLeft="11dp"
                 android:gravity="right|center_horizontal|center_vertical">
 
                 <TextView
