렌탈 맵 화면 UI수정/ 렌탈 예약시간 fragment크기 조절/ 렌탈 리스트 필터 UI 수정/

--- a/app/src/main/res/drawable/bg_custom_button.xml
+++ b/app/src/main/res/drawable/bg_custom_button.xml
@@ -4,6 +4,9 @@
         <shape>
             <solid android:color="@color/card_background_color"/>
             <corners android:radius = "16dp"/>
+            <stroke
+                android:width="10dp"
+                android:color="#FFffe7e9"/>
 
         </shape>
     </item>
