--- a/app/src/main/res/layout/activity_rental_list_filter_age.xml
+++ b/app/src/main/res/layout/activity_rental_list_filter_age.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <ImageButton
         android:id="@+id/imBtnBack_rental_list_filter_age"
