--- a/app/src/main/res/layout/activity_maps_rentcar_mainfrag.xml
+++ b/app/src/main/res/layout/activity_maps_rentcar_mainfrag.xml
@@ -82,7 +82,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/btnReserveDate"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
             android:background="@drawable/button_color_selector"
             app:layout_constraintHorizontal_weight="1"
@@ -99,7 +99,7 @@
                 android:layout_marginBottom="70dp"
                 android:cursorVisible="true"
                 android:fontFamily="@font/nanumsquareregular"
-                android:text="@string/reserve_date_title_str"
+                android:text="대여"
                 android:textColor="#ff4d4d"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -113,7 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="46dp"
+                android:layout_marginTop="6dp"
                 android:layout_marginBottom="48dp"
                 android:height="16dp"
                 android:fontFamily="@font/nanumsquareregular"
@@ -122,8 +122,7 @@
                 android:textSize="13sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.56"
+                app:layout_constraintTop_toBottomOf="@+id/reserve_title"
                 tools:text="2019.10.01 (화)" />
 
             <TextView
@@ -131,23 +130,36 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="70dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="24dp"
                 android:text="18:00"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/reserve_date"
                 tools:text="18:00" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/triangle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+        </ImageView>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/btnReturnDate"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
             android:background="@drawable/button_color_selector"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:layout_editor_absoluteY="0dp">
 
             <TextView
                 android:id="@+id/return_title"
@@ -156,8 +168,8 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginBottom="70dp"
-                android:fontFamily="@font/nanumsquareregular"
                 android:focusable="true"
+                android:fontFamily="@font/nanumsquareregular"
                 android:text="반납"
                 android:textColor="#ff4d4d"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -168,26 +180,26 @@
                 android:id="@+id/return_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="46dp"
+                android:layout_marginTop="6dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="48dp"
                 android:text="2019.10.04(금)"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/return_title" />
 
             <TextView
                 android:id="@+id/return_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="24dp"
                 android:text="17:00"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/return_date" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
