--- a/app/src/main/res/layout/activity_maps_rentcar_time.xml
+++ b/app/src/main/res/layout/activity_maps_rentcar_time.xml
@@ -8,10 +8,10 @@
     <com.super_rabbit.wheel_picker.WheelPicker
         android:id="@+id/nPick1"
         android:layout_width="124dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="32dp"
+        android:layout_height="250dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginBottom="72dp"
         android:scrollbarSize="18dp"
         app:fadingEdgeEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,16 +21,15 @@
         app:selectedTextColor="@color/agent_color_1NoOpp"
         app:typeface="@font/nanumsquarebold"
         app:wheelItemCount="5"
-        app:textSize="16sp"
-        tools:ignore="MissingConstraints" />
+        app:textSize="16sp" />
 
     <com.super_rabbit.wheel_picker.WheelPicker
         android:id="@+id/nPick2"
         android:layout_width="124dp"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="72dp"
         android:scrollbarSize="18dp"
         app:fadingEdgeEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,15 +41,14 @@
         app:wheelItemCount="5"
         app:textSize="16sp"
         app:wrapSelectorWheel="true"
-        app:align="CENTER"
-        tools:ignore="MissingConstraints" />
+        app:align="CENTER" />
 
     <View
         android:id="@+id/divider_1"
         android:layout_width="124dp"
         android:layout_height="1dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:background="@color/agent_color_1Opp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/nPick1" />
@@ -60,7 +58,7 @@
         android:layout_width="124dp"
         android:layout_height="1dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="144dp"
         android:background="@color/agent_color_1Opp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/nPick1" />
@@ -69,29 +67,29 @@
         android:id="@+id/divider_3"
         android:layout_width="124dp"
         android:layout_height="1dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="32dp"
         android:background="@color/agent_color_1Opp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/nPick2" />
+
 
     <View
         android:id="@+id/divider_4"
         android:layout_width="124dp"
         android:layout_height="1dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="144dp"
         android:layout_marginEnd="32dp"
         android:background="@color/agent_color_1Opp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/nPick2" />
-
 
     <Button
         android:id="@+id/btnCheck"
         android:layout_width="0dp"
         android:layout_height="52dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/default_button_type_1"
+        android:background="@drawable/number_picker_button"
         android:fontFamily="@font/nanumsquarebold"
         android:text="확인"
         android:textColor="#ffffff"
